--- a/hw2/hw2_jq2282.ipynb
+++ b/hw2/hw2_jq2282.ipynb
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 383,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1009,6 @@
       "RNNModel(\n",
       "  (embedding): Embedding(17635, 100)\n",
       "  (rnn): RNN(100, 64, num_layers=2, batch_first=True)\n",
-      "  (drop_layer): Dropout(p=0.5, inplace=False)\n",
       "  (fc): Linear(in_features=64, out_features=4, bias=True)\n",
       ")\n"
      ]
@@ -1043,59 +1042,81 @@
     "    def forward(self, x):\n",
     "        batch_size = x.size(0)\n",
     "        if x.size(1) != self.sentence_len:\n",
-    "            x_length = [x.size(1)]*x.size(0)\n",
-    "            x = self.pad(x)\n",
-    "            \n",
-    "        x = self.embedding(x).float()\n",
-    "        # Initialize hidden state with zeros\n",
-    "        h0 = Variable(torch.zeros(self.layer_dim, x.size(0), self.hidden_dim))\n",
-    "            \n",
-    "        # One time step\n",
-    "        out, hn = self.rnn(x, h0)\n",
-    "        #out = self.drop_layer(out)\n",
-    "        out = nn.utils.rnn.pack_padded_sequence(out).data\n",
-    "        out = self.fc(out[:, -1, :]) \n",
+    "            x_lengths, x = self.pad(x) \n",
+    "            x = self.embedding(x).float()\n",
+    "            x = nn.utils.rnn.pack_padded_sequence(x, x_lengths, batch_first=True)\n",
+    "            # Initialize hidden state with zeros\n",
+    "            #h0 = Variable(torch.zeros(self.layer_dim, x.size(0), self.hidden_dim))\n",
+    "\n",
+    "            # One time step\n",
+    "            out, _ = self.rnn(x)\n",
+    "            #out = self.drop_layer(out)\n",
+    "            print(np.shape(out))\n",
+    "            out, _ = nn.utils.rnn.pad_packed_sequence(x, batch_first=True)\n",
+    "            print(np.shape(out))\n",
+    "            out = out.contiguous()[:,-1,:]\n",
+    "            print(np.shape(out))\n",
+    "            out = self.fc(out)\n",
+    "        else:\n",
+    "            x = self.embedding(x).float()\n",
+    "            out, _ = self.rnn(x)\n",
+    "            out = self.fc(out[:, -1, :]) \n",
     "        return out\n",
     "    \n",
     "    def pad(self, x):\n",
     "        if x.size(1) > self.sentence_len:\n",
-    "            return x[:,:self.sentence_len]\n",
+    "            return [len(ix) for ix in x], x[:,:self.sentence_len]\n",
     "        elif x.size(1) < self.sentence_len:\n",
-    "            tmp = torch.zeros(x.size(0), self.sentence_len-x.size(1), dtype=torch.long)\n",
-    "            return torch.cat((x,tmp), 1)\n",
+    "            x_lengths = [len(ix) for ix in x]\n",
+    "            padded_x = torch.zeros(x.size(0), self.sentence_len, dtype=torch.long)\n",
+    "            # copy over the actual sequences\n",
+    "            for i, x_len in enumerate(x_lengths):\n",
+    "                sequence = x[i]\n",
+    "                padded_x[i, 0:x_len] = sequence[:x_len]\n",
+    "            return x_lengths, padded_x\n",
     "net = RNNModel(91, NUM_CLASSES, 64,2, embeddings)\n",
     "print(net)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 385,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 tensor(30.0615, grad_fn=<AddBackward0>)\n",
-      "1 tensor(29.9613, grad_fn=<AddBackward0>)\n",
-      "2 tensor(29.9590, grad_fn=<AddBackward0>)\n",
-      "3 tensor(30.0101, grad_fn=<AddBackward0>)\n",
-      "4 tensor(30.0191, grad_fn=<AddBackward0>)\n",
-      "5 tensor(29.9696, grad_fn=<AddBackward0>)\n",
-      "6 tensor(29.9981, grad_fn=<AddBackward0>)\n",
-      "7 tensor(29.9927, grad_fn=<AddBackward0>)\n",
-      "8 tensor(29.9846, grad_fn=<AddBackward0>)\n",
-      "9 tensor(30.0186, grad_fn=<AddBackward0>)\n",
-      "10 tensor(30.0006, grad_fn=<AddBackward0>)\n",
-      "11 tensor(29.9984, grad_fn=<AddBackward0>)\n",
-      "12 tensor(29.9817, grad_fn=<AddBackward0>)\n",
-      "13 tensor(29.9811, grad_fn=<AddBackward0>)\n",
-      "14 tensor(30.0010, grad_fn=<AddBackward0>)\n",
-      "15 tensor(29.9689, grad_fn=<AddBackward0>)\n",
-      "16 tensor(29.9854, grad_fn=<AddBackward0>)\n",
-      "17 tensor(29.9887, grad_fn=<AddBackward0>)\n",
-      "18 tensor(29.9706, grad_fn=<AddBackward0>)\n",
-      "19 tensor(29.9963, grad_fn=<AddBackward0>)\n"
+      "1.39463210105896\n",
+      "1.3888366222381592\n",
+      "1.3748220205307007\n",
+      "1.3817405700683594\n",
+      "1.3644577264785767\n",
+      "1.3414642810821533\n",
+      "1.3237872123718262\n",
+      "1.3141095638275146\n",
+      "1.383470892906189\n",
+      "1.396377682685852\n",
+      "1.348715901374817\n",
+      "(4,)\n",
+      "torch.Size([128, 82, 100])\n",
+      "torch.Size([128, 100])\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "size mismatch, m1: [128 x 100], m2: [64 x 4] at ../aten/src/TH/generic/THTensorMath.cpp:752",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-385-e54f241a7b1c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[0mtotal_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mibatch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0milabel\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdev_generator\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m         \u001b[0mdev_loss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel3\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mibatch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0milabel\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m         \u001b[0mtotal_loss\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0mdev_loss\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miepoch\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtotal_loss\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    545\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    546\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 547\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    548\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mhook\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    549\u001b[0m             \u001b[0mhook_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-383-0b7b7599397e>\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     40\u001b[0m             \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontiguous\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     41\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 42\u001b[0;31m             \u001b[0mout\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     43\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m             \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0membedding\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    545\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    546\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 547\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    548\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mhook\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    549\u001b[0m             \u001b[0mhook_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/torch/nn/modules/linear.py\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m     85\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     86\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 87\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinear\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mweight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbias\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     88\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mextra_repr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/torch/nn/functional.py\u001b[0m in \u001b[0;36mlinear\u001b[0;34m(input, weight, bias)\u001b[0m\n\u001b[1;32m   1367\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdim\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m2\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mbias\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1368\u001b[0m         \u001b[0;31m# fused op is marginally faster\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1369\u001b[0;31m         \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maddmm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbias\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1370\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1371\u001b[0m         \u001b[0moutput\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmatmul\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweight\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: size mismatch, m1: [128 x 100], m2: [64 x 4] at ../aten/src/TH/generic/THTensorMath.cpp:752"
      ]
     }
    ],
@@ -1109,10 +1130,14 @@
     "EPOCHS = 20\n",
     "losses = []\n",
     "for iepoch in range(EPOCHS): \n",
+    "    i = 0\n",
     "    for train_batch, train_label in train_generator:\n",
+    "        if i>10:\n",
+    "            break\n",
+    "        i += 1\n",
     "        # Compute and print loss\n",
     "        loss = criterion(model3(train_batch),train_label)\n",
-    "        #print(loss.item()) \n",
+    "        print(loss.item()) \n",
     "\n",
     "        # Zero the gradients\n",
     "        model3.zero_grad()\n",
@@ -1130,6 +1155,120 @@
     "    print(iepoch, total_loss)\n",
     "    losses.append(total_loss)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 361,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pad(x, sentence_len=91):\n",
+    "    if x.size(1) > sentence_len:\n",
+    "        return [len(ix) for ix in x], x[:,:sentence_len]\n",
+    "    elif x.size(1) < sentence_len:\n",
+    "        x_lengths = [len(ix) for ix in x]\n",
+    "        padded_x = torch.zeros(x.size(0), sentence_len, dtype=torch.long)\n",
+    "        # copy over the actual sequences\n",
+    "        for i, x_len in enumerate(x_lengths):\n",
+    "            sequence = x[i]\n",
+    "            padded_x[i, 0:x_len] = sequence[:x_len]\n",
+    "        return x_lengths, padded_x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 362,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([128, 82])"
+      ]
+     },
+     "execution_count": 362,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ibatch.size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 375,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([128, 91])\n",
+      "torch.Size([128, 64])\n",
+      "torch.Size([128, 4])\n"
+     ]
+    }
+   ],
+   "source": [
+    "l,ie = pad(ibatch)\n",
+    "print(ie.size())\n",
+    "ie = embedding(ie).float()\n",
+    "x = nn.utils.rnn.pack_padded_sequence(ie, l, batch_first=True)\n",
+    "# Initialize hidden state with zeros\n",
+    "#h0 = Variable(torch.zeros(self.layer_dim, x.size(0), self.hidden_dim))\n",
+    "\n",
+    "# One time step\n",
+    "out, _ = rnn(x)\n",
+    "#out = self.drop_layer(out)\n",
+    "out, _ = nn.utils.rnn.pad_packed_sequence(out, batch_first=True)\n",
+    "out = out.contiguous()[:,-1,:]\n",
+    "print(np.shape(out))\n",
+    "fc = nn.Linear(64,4)\n",
+    "out = fc(out)\n",
+    "print(np.shape(out))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class EmoGRU(nn.Module):\n",
+    "    def __init__(self, vocab_size, embedding_dim, hidden_units, batch_sz, output_size):\n",
+    "        super(EmoGRU, self).__init__()\n",
+    "        self.batch_sz = batch_sz\n",
+    "        self.hidden_units = hidden_units\n",
+    "        self.embedding_dim = embedding_dim\n",
+    "        self.vocab_size = vocab_size\n",
+    "        self.output_size = output_size\n",
+    "        \n",
+    "        # layers\n",
+    "        self.embedding = nn.Embedding(self.vocab_size, self.embedding_dim)\n",
+    "        self.dropout = nn.Dropout(p=0.5)\n",
+    "        self.gru = nn.GRU(self.embedding_dim, self.hidden_units)\n",
+    "        self.fc = nn.Linear(self.hidden_units, self.output_size)\n",
+    "    \n",
+    "    def initialize_hidden_state(self, device):\n",
+    "        return torch.zeros((1, self.batch_sz, self.hidden_units)).to(device)\n",
+    "    \n",
+    "    def forward(self, x, lens, device):\n",
+    "        x = self.embedding(x)\n",
+    "        self.hidden = self.initialize_hidden_state(device)\n",
+    "        output, self.hidden = self.gru(x, self.hidden) # max_len X batch_size X hidden_units\n",
+    "        out = output[-1, :, :] \n",
+    "        out = self.dropout(out)\n",
+    "        out = self.fc(out)\n",
+    "        return out, self.hidden  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
