--- a/hw2/hw2_jq2282.ipynb
+++ b/hw2/hw2_jq2282.ipynb
@@ -41,7 +41,7 @@
     "USE_CUDA = torch.cuda.is_available()  # CUDA will be available if you are using the GPU image for this homework\n",
     "\n",
     "# Global definitions - saving and loading data\n",
-    "FRESH_START = True  # set this to false after running once with True to just load your preprocessed data from file\n",
+    "FRESH_START = False  # set this to false after running once with True to just load your preprocessed data from file\n",
     "#                     (good for debugging)\n",
     "TEMP_FILE = \"temporary_data.pkl\"  # if you set FRESH_START to false, the program will look here for your data, etc."
    ]
