--- a/hw2/test_rnn.ipynb
+++ b/hw2/test_rnn.ipynb
@@ -62,7 +62,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this one works for just training\n",
+    "class RNNModel_training(nn.Module):\n",
+    "    def __init__(self, sentence_len, output_dim,hidden_dim, weight):\n",
+    "        super(RNNModel, self).__init__()\n",
+    "        # Number of hidden dimensions\n",
+    "        self.hidden_dim = hidden_dim\n",
+    "        self.sentence_len = sentence_len\n",
+    "        self.embed_dim = weight.size(1)       \n",
+    "        # Define embeddings\n",
+    "        self.embedding = nn.Embedding.from_pretrained(weight)\n",
+    "        # RNN\n",
+    "        self.rnn = nn.RNN(self.embed_dim,hidden_dim,num_layers=2,batch_first=True)     \n",
+    "        #self.drop_layer = nn.Dropout(0.5)\n",
+    "        self.fc = nn.Linear(hidden_dim, output_dim)\n",
+    "    \n",
+    "    def get_len(self, x):\n",
+    "        x_len = []\n",
+    "        for ix in x:\n",
+    "            if ix[-1] != 0:\n",
+    "                x_len.append(len(ix))\n",
+    "            else:\n",
+    "                x_len.append((ix==0).nonzero()[0])           \n",
+    "        return x_len\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        batch_size = x.size(0)\n",
+    "        x_lengths = self.get_len(x)\n",
+    "        x = self.embedding(x).float()\n",
+    "        out, _ = self.rnn(x)\n",
+    "        #print(np.shape(out))\n",
+    "        selected = torch.zeros(batch_size, self.hidden_dim, dtype=torch.float)\n",
+    "        for i, l in enumerate(x_lengths):\n",
+    "            selected[i,:] = out[i,l-1,:]\n",
+    "        #print(np.shape(selected))\n",
+    "        return self.fc(selected)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,40 +126,63 @@
     "    def get_len(self, x):\n",
     "        x_len = []\n",
     "        for ix in x:\n",
-    "            if (ix==0).nonzero()[0]:\n",
-    "                x_len.append((ix==0).nonzero()[0])\n",
-    "            else:\n",
+    "            if ix[-1] != 0:\n",
     "                x_len.append(len(ix))\n",
+    "            else:\n",
+    "                x_len.append((ix==0).nonzero()[0])           \n",
+    "        return x_len\n",
     "    \n",
+    "    def pad(self, x):\n",
+    "        if x.size(1) > self.sentence_len:\n",
+    "            return x[:,:self.sentence_len]\n",
+    "        elif x.size(1) < self.sentence_len:\n",
+    "            tmp = torch.zeros(x.size(0), self.sentence_len-x.size(1), dtype=torch.long)\n",
+    "            return torch.cat((x,tmp), 1)\n",
+    "        \n",
     "    def forward(self, x):\n",
     "        batch_size = x.size(0)\n",
     "        x_lengths = self.get_len(x)\n",
+    "        if x.size(1) != self.sentence_len:\n",
+    "            x = self.pad(x)\n",
     "        x = self.embedding(x).float()\n",
     "        out, _ = self.rnn(x)\n",
     "        #print(np.shape(out))\n",
     "        selected = torch.zeros(batch_size, self.hidden_dim, dtype=torch.float)\n",
     "        for i, l in enumerate(x_lengths):\n",
-    "            selected[i,:] = out[i,l,:]\n",
+    "            selected[i,:] = out[i,l-1,:]\n",
     "        #print(np.shape(selected))\n",
     "        return self.fc(selected)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'NoneType' object is not iterable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-45-d1cddbd9395c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;31m#         i += 1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m         \u001b[0;31m# Compute and print loss\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m         \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcriterion\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodel3\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_batch\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtrain_label\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m         \u001b[0;31m#print(loss.item())\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/anaconda3/lib/python3.6/site-packages/torch/nn/modules/module.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m    545\u001b[0m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_slow_forward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    546\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 547\u001b[0;31m             \u001b[0mresult\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    548\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mhook\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_forward_hooks\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    549\u001b[0m             \u001b[0mhook_result\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mhook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresult\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-44-8ca12c9b92d2>\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, x)\u001b[0m\n\u001b[1;32m     28\u001b[0m         \u001b[0;31m#print(np.shape(out))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m         \u001b[0mselected\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzeros\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhidden_dim\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ml\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx_lengths\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m             \u001b[0mselected\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m         \u001b[0;31m#print(np.shape(selected))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: 'NoneType' object is not iterable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 tensor(26.5086, grad_fn=<AddBackward0>)\n",
+      "1 tensor(25.7874, grad_fn=<AddBackward0>)\n",
+      "2 tensor(25.3442, grad_fn=<AddBackward0>)\n",
+      "3 tensor(25.5543, grad_fn=<AddBackward0>)\n",
+      "4 tensor(25.3593, grad_fn=<AddBackward0>)\n",
+      "5 tensor(25.3282, grad_fn=<AddBackward0>)\n",
+      "6 tensor(25.3982, grad_fn=<AddBackward0>)\n",
+      "7 tensor(25.3486, grad_fn=<AddBackward0>)\n",
+      "8 tensor(25.4165, grad_fn=<AddBackward0>)\n",
+      "9 tensor(25.4576, grad_fn=<AddBackward0>)\n",
+      "10 tensor(25.7182, grad_fn=<AddBackward0>)\n",
+      "11 tensor(25.5914, grad_fn=<AddBackward0>)\n",
+      "12 tensor(26.5881, grad_fn=<AddBackward0>)\n",
+      "13 tensor(25.7568, grad_fn=<AddBackward0>)\n",
+      "14 tensor(25.7759, grad_fn=<AddBackward0>)\n",
+      "15 tensor(25.7505, grad_fn=<AddBackward0>)\n",
+      "16 tensor(25.6915, grad_fn=<AddBackward0>)\n",
+      "17 tensor(26.0194, grad_fn=<AddBackward0>)\n",
+      "18 tensor(25.7799, grad_fn=<AddBackward0>)\n",
+      "19 tensor(25.9161, grad_fn=<AddBackward0>)\n"
      ]
     }
    ],
@@ -147,13 +213,13 @@
     "\n",
     "        # Update the parameters\n",
     "        optimizer.step()\n",
-    "    print(loss.item()) \n",
-    "#     total_loss = 0\n",
-    "#     for ibatch, ilabel in dev_generator:\n",
-    "#         dev_loss = criterion(model3(ibatch), ilabel)\n",
-    "#         total_loss += dev_loss\n",
-    "#     print(iepoch, total_loss)\n",
-    "#     losses.append(total_loss)"
+    "    #print(loss.item()) \n",
+    "    total_loss = 0\n",
+    "    for ibatch, ilabel in dev_generator:\n",
+    "        dev_loss = criterion(model3(ibatch), ilabel)\n",
+    "        total_loss += dev_loss\n",
+    "    print(iepoch, total_loss)\n",
+    "    losses.append(total_loss)"
    ]
   },
   {
@@ -173,7 +239,42 @@
     }
    ],
    "source": [
-    "np.shape(embeddings)"
+    "def test_model(model, loss_fn, test_generator):\n",
+    "    \"\"\"\n",
+    "    Evaluate the performance of a model on the development set, providing the loss and macro F1 score.\n",
+    "    :param model: a model that performs 4-way emotion classification\n",
+    "    :param loss_fn: a function that can calculate loss between the predicted and gold labels\n",
+    "    :param test_generator: a DataLoader that provides batches of the testing set\n",
+    "    \"\"\"\n",
+    "    gold = []\n",
+    "    predicted = []\n",
+    "\n",
+    "    # Keep track of the loss\n",
+    "    loss = torch.zeros(1)  # requires_grad = False by default; float32 by default\n",
+    "    if USE_CUDA:\n",
+    "        loss = loss.cuda()\n",
+    "\n",
+    "    model.eval()\n",
+    "\n",
+    "    # Iterate over batches in the test dataset\n",
+    "    with torch.no_grad():\n",
+    "        for X_b, y_b in test_generator:\n",
+    "            # Predict\n",
+    "            y_pred = model(X_b)\n",
+    "\n",
+    "            # Save gold and predicted labels for F1 score - take the argmax to convert to class labels\n",
+    "            gold.extend(y_b.cpu().detach().numpy())\n",
+    "            predicted.extend(y_pred.argmax(1).cpu().detach().numpy())\n",
+    "\n",
+    "            loss += loss_fn(y_pred.double(), y_b.long()).data\n",
+    "\n",
+    "    # Print total loss and macro F1 score\n",
+    "    print(\"Test loss: \")\n",
+    "    print(loss)\n",
+    "    print(\"F-score: \")\n",
+    "    print(f1_score(gold, predicted, average='macro'))\n",
+    "\n",
+    "test_model(model3, criterion, test_generator)"
    ]
   },
   {
