--- a/hw2/test_rnn.ipynb
+++ b/hw2/test_rnn.ipynb
@@ -112,15 +112,15 @@
     "class RNNModel(nn.Module):\n",
     "    def __init__(self, sentence_len, output_dim,hidden_dim, weight):\n",
     "        super(RNNModel, self).__init__()\n",
-    "        # Number of hidden dimensions\n",
+    "        # Define dimensions\n",
     "        self.hidden_dim = hidden_dim\n",
     "        self.sentence_len = sentence_len\n",
     "        self.embed_dim = weight.size(1)       \n",
-    "        # Define embeddings\n",
+    "        # Define embeddings layer\n",
     "        self.embedding = nn.Embedding.from_pretrained(weight)\n",
-    "        # RNN\n",
+    "        # Define 2-layer RNN\n",
     "        self.rnn = nn.RNN(self.embed_dim,hidden_dim,num_layers=2,batch_first=True)     \n",
-    "        #self.drop_layer = nn.Dropout(0.5)\n",
+    "        # Define the final dense layer \n",
     "        self.fc = nn.Linear(hidden_dim, output_dim)\n",
     "    \n",
     "    def get_len(self, x):\n",
