--- a/hw3/svd.ipynb
+++ b/hw3/svd.ipynb
@@ -222,17 +222,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
     "# generate index for words in vocabulary\n",
     "index_dict = dict()\n",
+    "word_dict = dict()\n",
     "ii = 0\n",
     "for i in word_counts2:\n",
     "    index_dict[i] = ii\n",
+    "    word_dict[ii] = i\n",
     "    ii += 1\n",
     "    \n",
+    "# transform count joint to sparse matrix\n",
     "import math\n",
     "row_index = []\n",
     "col_index = []\n",
@@ -255,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +268,7 @@
        " array([  241,   246,  3591, ..., 13885, 12761, 10634], dtype=int32))"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,52 +279,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def ww_sim(word, mat, topn=10):\n",
+    "    indx = index_dict[word]\n",
+    "    if isinstance(mat, sparse.csr_matrix):\n",
+    "        v1 = mat.getrow(indx)\n",
+    "    else:\n",
+    "        v1 = mat[indx:indx+1, :]\n",
+    "    sims = cosine_similarity(mat, v1).flatten()\n",
+    "    sindxs = np.argsort(-sims)\n",
+    "#     print(sindxs[0:topn])\n",
+    "#     print(index_dict[9254])\n",
+    "#     print(sims[9254])\n",
+    "    sim_word_scores = [(word_dict[sindx], sims[sindx]) for sindx in sindxs[0:topn]]\n",
+    "    return sim_word_scores"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<1x13891 sparse matrix of type '<class 'numpy.int64'>'\n",
-       "\twith 48 stored elements in Compressed Sparse Row format>"
+       "[('uncle', 1.0),\n",
+       " ('pump', 0.6556179289796744),\n",
+       " ('joel', 0.5944489410125583),\n",
+       " ('chuckled', 0.4543603147900393),\n",
+       " ('proudly', 0.34355454293437226),\n",
+       " ('fulton', 0.0),\n",
+       " ('dresses', 0.0),\n",
+       " ('shifts', 0.0),\n",
+       " ('continuum', 0.0),\n",
+       " ('superbly', 0.0)]"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ppmi.getrow(0)"
+    "ww_sim('uncle', ppmi)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(13891, 100) (100,) (100, 13891)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy.sparse import linalg\n",
+    "uu,ss,vv = linalg.svds(ppmi, idim)\n",
+    "print(np.shape(uu),np.shape(ss),np.shape(vv))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mac/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:2: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  \n",
+      "/Users/mac/anaconda3/lib/python3.6/site-packages/ipykernel_launcher.py:2: RuntimeWarning: invalid value encountered in true_divide\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "unorm = uu / np.sqrt(np.sum(uu*uu, axis=1, keepdims=True))\n",
+    "vnorm = vv / np.sqrt(np.sum(vv*vv, axis=0, keepdims=True))\n",
+    "#word_vecs = unorm\n",
+    "#word_vecs = vnorm.T\n",
+    "word_vecs = uu + vv.T\n",
+    "word_vecs_norm = word_vecs / np.sqrt(np.sum(word_vecs*word_vecs, axis=1, keepdims=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('female', 0.9999999999999994),\n",
+       " ('psithyrus', 0.9995610981153056),\n",
+       " ('transports', 0.9856031460312757),\n",
+       " ('pollen', 0.9849446192789209),\n",
+       " ('procurement', 0.9838721314092996),\n",
+       " ('kills', 0.9687023620683832),\n",
+       " ('soul', 0.935564528841466),\n",
+       " ('lacks', 0.9338772281824219),\n",
+       " ('endless', 0.9277229590486692),\n",
+       " ('affectionate', 0.9163717452836537)]"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ww_sim(\"female\",word_vecs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -394,6 +492,91 @@
    ],
    "source": [
     "print(ppmi[0,:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'save'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-123-d30a2fe9d97f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mword_vecs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"../../NLPdata/hw3/savedModel/test\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'save'"
+     ]
+    }
+   ],
+   "source": [
+    "word_vecs.save(\"../../NLPdata/hw3/savedModel/test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(13891, 100)"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.shape(word_vecs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.63849412e-04, -9.70924308e-06, -3.89196601e-04, -1.99606045e-04,\n",
+       "       -1.52572737e-04,  3.92952168e-04,  4.11227720e-16,  6.34080014e-04,\n",
+       "       -8.64653808e-05, -1.56360244e-03, -5.49293412e-15, -2.56142763e-17,\n",
+       "        1.16559588e-04, -4.07202049e-05,  4.32493179e-05,  2.21068619e-04,\n",
+       "        3.71345924e-04,  4.73482216e-04,  8.14642407e-17, -4.92336396e-04,\n",
+       "       -1.26622883e-04,  1.42008801e-15,  6.22602646e-04,  9.23833035e-05,\n",
+       "       -1.18927200e-04,  9.85675300e-17,  2.16759825e-05, -4.91414635e-16,\n",
+       "       -3.35825277e-04, -3.18863859e-16, -1.83852395e-04, -8.15787470e-05,\n",
+       "        2.11504127e-17, -8.56977114e-17, -6.59427894e-05,  2.85409917e-04,\n",
+       "       -1.09294355e-16,  6.32557204e-05,  5.77771367e-05,  8.97643609e-05,\n",
+       "       -4.61098228e-05,  2.48408268e-05, -3.19926818e-04, -9.76574519e-05,\n",
+       "       -5.61873316e-05,  6.93308960e-04,  3.10089953e-15, -1.51924772e-04,\n",
+       "       -2.84483907e-05,  1.10950504e-04, -5.57999895e-17,  1.62489884e-05,\n",
+       "       -1.04200530e-04, -5.91413011e-05,  3.16817047e-04,  5.76590544e-05,\n",
+       "        1.64330426e-06, -5.69516610e-04,  9.03169577e-06, -1.88214933e-05,\n",
+       "       -1.12542091e-04, -1.75870998e-04, -9.78829467e-05,  7.43822831e-05,\n",
+       "        2.59406076e-04, -3.80664763e-04,  1.97051600e-04, -3.02960186e-05,\n",
+       "        2.94307443e-05, -1.90648587e-04, -5.88568542e-05, -1.07930207e-04,\n",
+       "       -4.16241997e-04,  4.30507776e-05,  1.45312311e-04,  1.95227415e-04,\n",
+       "        4.36293493e-03, -4.09497445e-05, -1.27053849e-05, -1.73563958e-04,\n",
+       "       -2.35633146e-04, -8.45838896e-05,  3.96022024e-05,  4.14037738e-05,\n",
+       "        1.62074476e-05, -7.53819548e-06,  6.75414849e-05,  1.29570872e-06,\n",
+       "       -3.44006714e-05,  5.28233248e-05, -2.69400607e-05,  2.61495000e-04,\n",
+       "        8.93578253e-06,  6.34366818e-06, -6.09949907e-06,  7.08059894e-05,\n",
+       "        3.08302097e-05, -9.56924279e-07,  3.64591979e-07,  2.60713917e-06])"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "word_vecs[0]"
    ]
   },
   {
